# reddit-sentiment-analysis

./: Makefile  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
src/: reddit_data.py
tests/: test_reddit_market_analysis.py
