[tool.poetry]
name = "reddit_market_analysis"
version = "0.1.0"
description = ""
authors = ["bharathpadmaraju <bharath.padmaraju@avirtek.com>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^6.5.1"
TextBlob = "^0.15.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
